Fixed spacing on projects page on smaller screens.

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -29,8 +29,7 @@
     background-color: var(--main-white);
     color: var(--main-black);
     display: inline;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding: 0 5px;
     border-radius: 20px;
     text-transform: uppercase;
     font-weight: bold;
@@ -39,7 +38,7 @@
 .question-text, .answer-text {
     position: relative;
     display: inline-block;
-    padding: 10px;
+    padding: 1em;
     text-align: left;
     font-weight: bold;
     font-size: clamp(0.75rem, 1.5vw, 1rem);
@@ -51,7 +50,7 @@
 .question-text {
     background-color: var(--main-grey);
     color: var(--main-white);
-    margin-top: 10px;
+    margin-top: 0.5em;
     margin-right: 20vw;
 }
 
@@ -96,7 +95,6 @@
 
 .table-responsive {
     border-radius: 15px;
-    /* margin-bottom: 50px; */
     width: 60vw;
     font-size: clamp(0.5rem, 1.5vw, 1rem);
     border: 2px solid goldenrod;
@@ -130,10 +128,9 @@
 }
 
 .key-icon-tip {
-    top: 1em;
-    left: -1.5em;
-    width: 6.5vw;
-    -webkit-opacity: .9;
+    top: 27.5%;
+    left: -1em;
+    right: initial;
     opacity: .9;
 }
 
