--- a/src/styles/Animations.css
+++ b/src/styles/Animations.css
@@ -60,7 +60,7 @@
     }
     100% {
         transform: skew(-8deg) translateX(0);
-        opacity: 1;
+        opacity: .9;
     }
 }
 
@@ -71,7 +71,7 @@
     }
     100% {
         transform: skew(8deg) translateX(0);
-        opacity: 1;
+        opacity: .9;
     }
 }
 
@@ -132,7 +132,7 @@
     }
     100% {
         transform: translateX(0);
-        opacity: 1;
+        opacity: .9;
     }
 }
 
@@ -143,7 +143,7 @@
     }
     100% {
         transform: translateX(0);
-        opacity: 1;
+        opacity: .9;
     }
 }
 
@@ -183,3 +183,19 @@
         transform: translateY(0); 
     }
 }
+
+@keyframes hexHeading {
+    0% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+    50% {
+        opacity: .5;
+        transform: translateX(10px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0); 
+    }
+}
+
