--- a/src/styles/Variables.css
+++ b/src/styles/Variables.css
@@ -1,6 +1,6 @@
 :root {
     --hex: polygon(0% 25%, 0% 75%, 50% 100%, 100% 75%, 100% 25%, 50% 0%);
-    --parallelogram: polygon(20% 0%, 100% 0%, 80% 100%, 0% 100%);
+    --parallelogram: polygon(25% -60%, 100% -60%, 82% 100%, 5% 100%);
     --width: 13rem;
     --margin: 6px;
     --rows: calc(1.732 * var(--width) + 4 * var(--margin) - 1px);
